chore: include model artifacts for CI

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ data/raw/*
 !models/logistic_pipeline.joblib
 
 !models/threshold.json
+
+!models/logistic_pipeline.joblib
+
+!models/threshold.json
